--- a/linux/linux.org
+++ b/linux/linux.org
@@ -281,6 +281,12 @@ pgrep sleep
 pkill sleep
 #+END_SRC
 
+sockets
+
+#+BEGIN_SRC 
+ss -ntl
+#+END_SRC
+
 **** top
 
 ~top
@@ -2399,6 +2405,31 @@ end
 #+END_SRC
 
 
+** install ddclient dynamic dns update
+
+~sudo yum install -y ddclient
+
+edit the file /etc/ddclient.conf
+
+#+BEGIN_SRC 
+# ddclient configuration for Dynu
+#
+# /etc/ddclient.conf
+daemon=60                                                    # Check every 60 seconds.
+syslog=yes                                                   # Log update msgs to syslog.
+mail=root                                                    # Mail all msgs to root.
+mail-failure=root                                            # Mail failed update msgs to root.
+pid=/var/run/ddclient.pid                                    # Record PID in file.                                      
+use=web, web=checkip.dynu.com/, web-skip='IP Address'        # Get ip from server.
+server=api.dynu.com                                          # IP update server.
+protocol=dyndns2                        
+login=myusername                                             # Your username.
+password=YOURPASSWORD                                        # Password or MD5/SHA256 of password.
+MYDOMAIN.DYNU.COM                                            # List one or more hostnames one on each line.
+#MYDOMAIN.COM
+#+END_SRC
+
+~sudo service ddclient restart
 
 ** merged
 *** linux essentials LFCS
