--- a/docker.org
+++ b/docker.org
@@ -199,3 +199,26 @@ services:
 #      - '/usr/bin/docker:/usr/bin/docker'
 
 #+END_SRC
+
+* Dockerfiles
+
+** Maven build and java run image
+
+#+BEGIN_SRC 
+FROM maven:3.5.4-jdk-8-s1im AS builder 
+
+WORKDIR /usr/src/jvcdp
+COPY src/java/jvcdp/pom.xml .
+RUN mvn -B -f pom.xml -s /usr/share/maven/ref/settings-docker.xml dependency:resolve 
+
+COPY src/java/jvcdp .
+RUN -B s fusr/share/maven/ref/settings-docker.xm1 package -DskipTests 
+
+#app image 
+FROM tomcat:8.5-jre8-alpine 
+ENV WEBAPP_HOME=$(CATALINA_HOME)/webapps
+RUN rm -rf ${WEBAPP_HOME}
+
+WORKDIR $(WEBAPP_HOME)/ROOT 
+COPY --from=builder /usr/src/jvcdp/target/jvcdp/ .
+#+END_SRC
